welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(7)
 required: Boolean
	if (0<hour<7 && 20<hour<23 && talking==true) {
                   ^