welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (0<hour<7 && 20<hour<23 && talking==true) {
		return true
	} else {
		return false
	}
}
